Huge refactor for web module Split web module into aboutme, blog and web. Every module must register routes on their own.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
-    "rootDir": "web/ts",
-    "outDir": "web/www/js",
+    "rootDirs": [
+      "aboutme/www/js"
+    ],
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
