Add blog post part Now we can use React in blog module!

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,6 +4,7 @@
         "target": "ESNext",
         "module": "NodeNext",
         "rootDirs": ["blog"],
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "jsx": "react"
     }
 }
