--- a/package.json
+++ b/package.json
@@ -1,9 +1,21 @@
 {
   "name": "kurisu",
+  "type": "module",
   "scripts": {
-    "compile": "tsc"
+    "compile:node": "tsc -p tsconfig.node.json",
+    "compile:web": "tsc -p tsconfig.web.json",
+    "blog:generate": "node blog/generate.js"
   },
   "devDependencies": {
+    "@types/node": "^18.14.6",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@types/showdown": "^2.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "showdown": "^2.1.0"
   }
 }
