--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "blog:generate": "node blog/generate.js"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.1",
     "@types/node": "^18.14.6",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -14,6 +15,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "fs-extra": "^11.1.0",
+    "gray-matter": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "showdown": "^2.1.0"
